unpackaged/config/ready/15_Calls/objects/hed__Term_Grade__c.object
<CustomObject>
    <fields>
        <fullName>REDU_Call_Override__c</fullName>
        <label>Call Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rio_ed__Grading_Period_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>REDU_Grade__c</fullName>
        <formula>IF( NOT( ISBLANK( TEXT( REDU_Grade_Override__c ) ) ), TEXT( REDU_Grade_Override__c ), IF(ISPICKVAL(hed__Course_Offering__r.hed__Course__r.rio_ed__Grade_Type__c ,&quot;Score&quot;),TEXT( MFLOOR(hed__Numerical_Grade__c)), hed__Letter_Grade__c)) &amp; &quot; (&quot; &amp;  IF( NOT( ISBLANK( TEXT(  REDU_Call_Override__c ) ) ),  IF(TEXT(  REDU_Call_Override__c ) = &quot;Ordinary&quot;, &quot;Ord&quot;, &quot;ExOrd&quot;) ,   TEXT( hed__Term_Grade_Type__c ) )  &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REDU_Grade_Override__c</fullName>
        <label>Grade Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>